Promotion Alignment Issues Fixed

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ body {
     color: #495e57;
 }
 
+/* header */
+
 .header__container {
     display: inline-flex;
     flex-direction: column;
@@ -19,6 +21,8 @@ body {
     width: 50%;
     margin: 5px 40px;
 }
+
+/* navigation-bar */
 
 ul {
     list-style-type: none;
@@ -40,13 +44,18 @@ a {
     color: #495e57;
 }
 
+/* main */
+
 .main__container {
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "promotion"
                          "info";
     gap: 15px;
+    width: 100%;
 }
+
+/* promotion */
 
 .promotion {
     grid-area: promotion;
@@ -55,14 +64,17 @@ a {
     align-items: center;
     background-color: #495e57;
     color: #131010;
-    font-size: 5rem;
-    margin: 5px 40px;
+    font-size: 3rem;
+    margin: 5px 10%;
+    padding: 0 5px;
     border-radius: 15px;
 }
 
 .promotion p {
     text-align: center;
 }
+
+/* info */
 
 .info {
     grid-area: info;
@@ -71,6 +83,7 @@ a {
     grid-template-areas: "item1 item2 item3";
     margin: 5px 40px;
     gap: 15px;
+    border: 3px solid red;
 }
 
 .info__item {
@@ -79,6 +92,7 @@ a {
     color: #131010;
     border-radius: 15px;
     text-align: center;
+    border: 2px solid dodgerblue;
 }
 
 .item1 {
@@ -101,3 +115,6 @@ a {
 .info__item h2 {
     margin-top: 5px;
 }
+
+/* footer */
+
